// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Instructions />  should render properly 1`] = `
<div
  className="p-12"
>
  <h3
    className="text-3xl font-headline uppercase"
  >
    title
  </h3>
  <p
    className="text-gray-600"
  >
    description
  </p>
  <ul />
</div>
`;

exports[`<Instructions />  should render properly when exmaples are present 1`] = `
<div
  className="p-12"
>
  <h3
    className="text-3xl font-headline uppercase"
  >
    title
  </h3>
  <p
    className="text-gray-600"
  >
    description
  </p>
  <div
    className="my-4 text-lg"
  >
    Examples
  </div>
  <ul>
    <li
      className="flex mb-1"
    >
      <span
        className="bg-gray-300 py-1 px-2 rounded mr-3 text-gray-700"
      >
        functionExample
      </span>
      <span
        className="mr-3 text-gray-500"
      >
         =&gt; 
      </span>
      <span
        className="mr-3 font-bold"
      >
        expectedOutput
      </span>
      <span
        className="text-gray-500 italic"
      >
        comment
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Instructions />  should render properly when notes are present 1`] = `
<div
  className="p-12"
>
  <h3
    className="text-3xl font-headline uppercase"
  >
    title
  </h3>
  <p
    className="text-gray-600"
  >
    description
  </p>
  <ul />
  <div
    className="my-4 text-lg"
  >
    Notes
  </div>
  <p
    className="text-gray-600"
  >
    some notes
  </p>
</div>
`;
